# zshrink

./: .gitignore  CMakeLists.txt
zshrink/: CMakeLists.txt  main.c  zomb_arithmetic_coder.c  zomb_arithmetic_coder.h  zomb_datastream.c  zomb_datastream.h  zomb_encrypt.c  zomb_encrypt.h  zomb_fileio.c  zomb_fileio.h  zshrink.1  zshrink.c  zshrink.h  zshrink_utilities.h
